--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "nextra-theme-blog": "^2.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "sharp": "^0.33.1"
   },
   "prettier": {
     "arrowParens": "always",
